# sentry-repro

./: .gitignore  BUILD.bazel  Cargo.toml  README.md  WORKSPACE  main.rs
cargo/: BUILD.bazel  crates.bzl
cargo/remote/: BUILD.anyhow-1.0.43.bazel  BUILD.cc-1.0.70.bazel  BUILD.cmake-0.1.45.bazel  BUILD.libc-0.2.101.bazel  BUILD.rmp-0.8.10.bazel  BUILD.rmpv-0.4.7.bazel  BUILD.sentry-contrib-native-0.3.1.bazel  BUILD.sentry-contrib-native-sys-0.3.1.bazel  BUILD.syn-1.0.75.bazel  BUILD.thiserror-1.0.28.bazel  BUILD.thiserror-impl-1.0.28.bazel  BUILD.vsprintf-2.0.0.bazel
