[package]
name = "link-issue-repro"
version = "0.0.0"
edition = "2018"

[[bin]]
name = "link-issue-repro"
path = "main.rs"

[dependencies]
sentry-contrib-native = "=0.3.1"

[package.metadata.raze]
workspace_path = "//cargo"
package_aliases_dir = "cargo"
targets = [
  "x86_64-unknown-linux-gnu",
]
genmode = "Remote"

[package.metadata.raze.crates.sentry-contrib-native-sys.'*']
buildrs_additional_environment_variables = { DEBUG = "true" }
